deleted the header with the buttons and added the bar buttons

--- a/Homepwner/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Homepwner/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Items View Controller-->
+        <!--Homepwner-->
         <scene sceneID="8bt-g9-saI">
             <objects>
                 <tableViewController id="qPt-C6-zEy" customClass="ItemsViewController" customModule="Homepwner" customModuleProvider="target" sceneMemberID="viewController">
@@ -15,38 +15,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="r8E-oZ-q0b">
-                            <rect key="frame" x="0.0" y="64" width="375" height="44"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WME-px-I25">
-                                    <frame key="frameInset" minX="16" minY="7" width="30" height="30"/>
-                                    <state key="normal" title="Edit"/>
-                                    <connections>
-                                        <action selector="toggleEditingModeWithSender:" destination="qPt-C6-zEy" eventType="touchUpInside" id="mNk-NP-pBf"/>
-                                    </connections>
-                                </button>
-                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NWn-kg-ySW">
-                                    <frame key="frameInset" minX="337" minY="7" width="30" height="30"/>
-                                    <state key="normal" title="Add"/>
-                                    <connections>
-                                        <action selector="addNewItemWithSender:" destination="qPt-C6-zEy" eventType="touchUpInside" id="dPZ-aw-1eY"/>
-                                    </connections>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <constraints>
-                                <constraint firstItem="NWn-kg-ySW" firstAttribute="leading" secondItem="WME-px-I25" secondAttribute="trailing" constant="8" id="FyJ-d5-fFa"/>
-                                <constraint firstItem="WME-px-I25" firstAttribute="centerY" secondItem="r8E-oZ-q0b" secondAttribute="centerY" id="Rvw-Io-Zes"/>
-                                <constraint firstItem="NWn-kg-ySW" firstAttribute="centerY" secondItem="r8E-oZ-q0b" secondAttribute="centerY" id="ZhO-Ar-5pa"/>
-                                <constraint firstItem="NWn-kg-ySW" firstAttribute="width" secondItem="WME-px-I25" secondAttribute="width" id="gOs-Oh-fU2"/>
-                                <constraint firstAttribute="trailing" secondItem="NWn-kg-ySW" secondAttribute="trailing" constant="8" id="huj-cP-Rso"/>
-                                <constraint firstItem="WME-px-I25" firstAttribute="leading" secondItem="r8E-oZ-q0b" secondAttribute="leading" constant="8" id="i9T-2x-cgj"/>
-                            </constraints>
-                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="65" id="dXe-tX-LvD" customClass="ItemCell" customModule="Homepwner" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="136" width="375" height="65"/>
+                                <rect key="frame" x="0.0" y="92" width="375" height="65"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dXe-tX-LvD" id="WPg-Hd-bpE">
                                     <frame key="frameInset" width="375" height="64.5"/>
@@ -91,7 +62,13 @@
                             <outlet property="delegate" destination="qPt-C6-zEy" id="RUn-tP-2iR"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="gmD-dn-8vZ"/>
+                    <navigationItem key="navigationItem" title="Homepwner" id="gmD-dn-8vZ">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="ESb-DR-MJo">
+                            <connections>
+                                <action selector="addNewItemWithSender:" destination="qPt-C6-zEy" id="jH8-us-CtM"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t5g-nj-f8y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
