--- a/Homepwner/Homepwner/Base.lproj/Main.storyboard
+++ b/Homepwner/Homepwner/Base.lproj/Main.storyboard
@@ -144,20 +144,42 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="249" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="QHh-Ll-3mr"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O5l-Gc-sII">
+                                        <state key="normal" title="Change Date"/>
+                                        <connections>
+                                            <segue destination="yuz-sL-GIW" kind="show" identifier="ChangeDate" id="pkN-M7-Kuf"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="a3F-qR-2n2" firstAttribute="leading" secondItem="gly-F7-eTJ" secondAttribute="leading" id="j4t-53-4VM"/>
                                     <constraint firstItem="FeX-ov-cao" firstAttribute="leading" secondItem="a3F-qR-2n2" secondAttribute="leading" id="xP5-Zt-6KF"/>
                                 </constraints>
                             </stackView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8h8-iW-cP7">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="upv-uB-V1F"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="camera" id="U8l-aO-DP8">
+                                        <connections>
+                                            <action selector="takePicture:" destination="6oy-VY-xfP" id="agd-Tv-qsE"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="8h8-iW-cP7" firstAttribute="top" secondItem="601-f7-jbN" secondAttribute="bottom" constant="8" id="0Q4-Z0-PZq"/>
+                            <constraint firstItem="vvU-op-OsB" firstAttribute="top" secondItem="8h8-iW-cP7" secondAttribute="bottom" id="AQZ-7u-7N3"/>
                             <constraint firstItem="601-f7-jbN" firstAttribute="top" secondItem="Orl-hX-seq" secondAttribute="bottom" constant="8" id="AWu-Uv-Qov"/>
+                            <constraint firstItem="8h8-iW-cP7" firstAttribute="leading" secondItem="r9a-9D-KbP" secondAttribute="leading" id="HyI-Hs-APK"/>
                             <constraint firstAttribute="leadingMargin" secondItem="601-f7-jbN" secondAttribute="leading" id="e3i-o3-GEa"/>
+                            <constraint firstAttribute="trailing" secondItem="8h8-iW-cP7" secondAttribute="trailing" id="paV-xR-J4A"/>
                             <constraint firstAttribute="trailingMargin" secondItem="601-f7-jbN" secondAttribute="trailing" id="xob-QE-rWb"/>
-                            <constraint firstItem="vvU-op-OsB" firstAttribute="top" secondItem="601-f7-jbN" secondAttribute="bottom" constant="8" id="zqo-Oo-2Yi"/>
                         </constraints>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="XdH-2y-95z" appends="YES" id="VzA-HC-83C"/>
@@ -165,6 +187,7 @@
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="P4e-Ix-p9t" id="OKY-de-o8V"/>
+                        <outlet property="imageView" destination="QHh-Ll-3mr" id="Pkq-tg-Y0D"/>
                         <outlet property="nameField" destination="1Hg-AI-0tD" id="pau-QP-eiH"/>
                         <outlet property="serialNumberField" destination="YnC-jp-cdJ" id="rPf-sa-4kc"/>
                         <outlet property="valueField" destination="e7L-d9-Ifb" id="lXe-qg-W2F"/>
@@ -178,6 +201,49 @@
                 </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="2088.8000000000002" y="-26.53673163418291"/>
+        </scene>
+        <!--Date Picker View Controller-->
+        <scene sceneID="IBg-fc-Czv">
+            <objects>
+                <viewController id="yuz-sL-GIW" customClass="DatePickerViewController" customModule="Homepwner" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qwJ-tq-I5h"/>
+                        <viewControllerLayoutGuide type="bottom" id="AIh-vM-jyk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nSl-xF-0Vz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="cz0-ty-pfw">
+                                <date key="date" timeIntervalSinceReferenceDate="498087822.046942">
+                                    <!--2016-10-13 21:43:42 +0000-->
+                                </date>
+                            </datePicker>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JP6-rl-MRo">
+                                <frame key="frameInset" minX="142" minY="445" width="90" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Save Change"/>
+                                <connections>
+                                    <action selector="changeDate:" destination="yuz-sL-GIW" eventType="touchUpInside" id="GIr-5P-S2r"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cz0-ty-pfw" firstAttribute="leading" secondItem="nSl-xF-0Vz" secondAttribute="leadingMargin" constant="11.5" id="8hM-vI-scY"/>
+                            <constraint firstItem="AIh-vM-jyk" firstAttribute="top" secondItem="cz0-ty-pfw" secondAttribute="bottom" constant="257" id="NaL-f6-6I7"/>
+                            <constraint firstItem="cz0-ty-pfw" firstAttribute="top" secondItem="qwJ-tq-I5h" secondAttribute="bottom" constant="71" id="gNH-2t-dP3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="cz0-ty-pfw" secondAttribute="trailing" constant="11.5" id="rK9-Jq-pNg"/>
+                            <constraint firstItem="cz0-ty-pfw" firstAttribute="centerX" secondItem="nSl-xF-0Vz" secondAttribute="centerX" id="sPo-sl-kVQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="newDate" destination="cz0-ty-pfw" id="StE-4c-ELS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QFs-i7-oA4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3044" y="-27"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gGw-OS-Q2m">
